Fixed typo and run instructions

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
 
     <!-- Additional theme sample -->
-    <!--link rel="stylesheet" href="css/klarna-theme.css" -->
+    <link rel="stylesheet" href="css/klarna-theme.css"/>
   </head>
   <body> 
     <div id="layout">
